@@ -19,6 +19,8 @@
  - Support for COUNT(DISTINCT x) syntax in PHQL
  - Allowing user-defined messages in most Phalcon\Mvc\Model\Validators
  - Now Phalcon\Mvc\Model\Validator\StringLength uses mb_strlen when it's available
+ - Allowed pass a URI manually to Phalcon\Mvc\Micro::handle()
+ - Fixed missing json_encode filter in Volt
 
 0.6.1
  - Fixed bug in Phalcon\Mvc\Micro's not-found handler
